catalog page layout

--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,132 @@
     <title>Каталог Глейси</title>
   </head>
   <body>
-
+      <header class="main-header">
+          <nav class="main-navigation">
+            <a href="index.html">
+                <img src="http://placehold.it/150x100"  alt="Логотип магазина">
+            </a>
+            <ul class="site-navigation">
+              <li class="site-navigation-current"><a href="catalog.html">Каталог</a></li>
+              <li><a href="delivery.html">Доставка и оплата</a></li>
+              <li><a href="about_company.html">О Компании</a></li>
+            </ul>
+            <ul class="user-navigation">
+              <li class="search">Поиск</li>
+              <li class="login-link">Вход</li>
+              <li class="basket">2 товара</li>
+            </ul>
+            <span class="opening-hours">С 10 до 20, ежедневно</span><br>
+            <span class="phone-number">8 812 450-25-25</span>
+          </nav>
+        </header>
+        <main class="container"></main>
+         <h1>Сливочное мороженое</h1>
+         <ul class="breadcrumbs">
+           <li><a href="index.html">Главная</a></li>
+           <li><a href="catalog.html">Каталог</a></li>
+           <li class="breadcrumbs-current-page">Сливочное мороженое</li>
+         </ul>
+         <section class="filters">
+           <h2 class="visually-hidden">Фильтры мороженого</h2>
+           <!-- здесь будет форма -->
+         </section>
+         <section class="catalog">
+           <h2 class="visually-hidden">Список видов мороженого</h2>
+           <ul class="catalog-list">
+             <li class="catalog-item">
+                <h3>описание мороженого1</h3>
+                <img src="http://placehold.it/150x100">
+                <span class="item-price">310</span><span class="item-weight">/кг</span>
+             </li>
+             <li class="catalog-item">
+                <h3>описание мороженого2</h3>
+                <img src="http://placehold.it/150x100">
+                <span class="item-price">380</span><span class="item-weight">/кг</span>
+              </li>
+              <li class="catalog-item">
+                  <h3>описание мороженого3</h3>
+                  <img src="http://placehold.it/150x100">
+                  <span class="item-price">355</span><span class="item-weight">/кг</span>
+              </li>
+              <li class="catalog-item">
+                  <h3>описание мороженого4</h3>
+                  <img src="http://placehold.it/150x100">
+                  <span class="item-price">415</span><span class="item-weight">/кг</span>
+              </li>
+              <li class="catalog-item">
+                  <h3>описание мороженого5</h3>
+                  <img src="http://placehold.it/150x100">
+                  <span class="item-price">325</span><span class="item-weight">/кг</span>
+              </li>
+              <li class="catalog-item">
+                    <h3>описание мороженого6</h3>
+                    <img src="http://placehold.it/150x100">
+                    <span class="item-price">410</span><span class="item-weight">/кг</span>
+              </li>
+              <li class="catalog-item">
+                    <h3>описание мороженого7</h3>
+                    <img src="http://placehold.it/150x100">
+                    <span class="item-price">375</span><span class="item-weight">/кг</span>
+              </li>
+              <li class="catalog-item">
+                  <h3>описание мороженого8</h3>
+                  <img src="http://placehold.it/150x100">
+                  <span class="item-price">320</span><span class="item-weight">/кг</span>
+              </li>
+              <li class="catalog-item">
+                  <h3>описание мороженого9</h3>
+                  <img src="http://placehold.it/150x100">
+                  <span class="item-price">440</span><span class="item-weight">/кг</span>
+              </li>
+              <li class="catalog-item">
+                  <h3>описание мороженого10</h3>
+                  <img src="http://placehold.it/150x100">
+                  <span class="item-price">435</span><span class="item-weight">/кг</span>
+              </li>
+              <li class="catalog-item">
+                  <h3>описание мороженого11</h3>
+                  <img src="http://placehold.it/150x100">
+                  <span class="item-price">355</span><span class="item-weight">/кг</span>
+                </li>
+                <li class="catalog-item">
+                    <h3>описание мороженого12</h3>
+                    <img src="http://placehold.it/150x100">
+                    <span class="item-price">420</span><span class="item-weight">/кг</span>
+                </li>
+           </ul>
+           <ul class="pages">
+              <li class="current-page">1</li>
+              <li>2</li>
+              <li>3</li>
+              <li>4</li>
+              <li>5</li>
+              <li>далее</li>
+            </ul>
+         </section>
+         <footer class="main-footer">
+            <div class="footer-social">
+              <ul>
+                <li><a class="social-button" href="#">Твиттер</a></li>
+                <li><a class="social-button" href="#">Инстаграм</a></li>
+                <li><a class="social-button" href="#">Фейсбук</a></li>
+                <li><a class="social-button" href="#">Вконтакте</a></li>
+              </ul>
+            </div>
+            <p class="information">
+              <a class="link-information" href="#">Для поставщиков</a><br>
+              <a class="link-information" href="#">О производстве</a>
+            </p>
+            <p>
+              <a class="link-information" href="#">Наши документы</a><br>
+              <a class="link-information" href="#">Экологические стандарты</a>
+            </p>
+            <p class="footer-copyright">
+              <a href="https://htmlacademy.ru/intensive/htmlcss">
+                <img src="http://placehold.it/150x100"  alt="Логотип HTML Academy">
+              </a>
+              Сделано в HTML Academy ©2017
+            </p>
+        </footer>
   </body>
 </html>
