--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body>
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-header-logo">
+        <div class="main-header-logo">
             <img src="http://placehold.it/150x100"  alt="Логотип магазина">
-        </a>
+        </div>
         <ul class="site-navigation">
           <li><a href="catalog.html">Каталог</a></li>
           <li><a href="delivery.html">Доставка и оплата</a></li>
@@ -20,6 +20,8 @@
           <li class="login-link">Вход</li>
           <li class="basket">Пусто</li>
         </ul>
+        <span class="opening-hours">С 10 до 20, ежедневно</span><br>
+        <span class="phone-number">8 812 450-25-25</span>
       </nav>
     </header>
     <main class="container">
@@ -122,8 +124,10 @@
           <a class="link-information" href="#">Экологические стандарты</a>
         </p>
         <p class="footer-copyright">
+          <a href="https://htmlacademy.ru/intensive/htmlcss">
           <img src="http://placehold.it/150x100"  alt="Логотип HTML Academy">
-            Сделано в HTML Academy ©2017
+          </a>
+          Сделано в HTML Academy ©2017
         </p>
     </footer>
   </body>
