--- a/index.html
+++ b/index.html
@@ -12,91 +12,101 @@
         </div>
         <ul class="site-navigation">
           <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="delivery.html">Доставка и оплата</a></li>
-          <li><a href="about_company.html">О Компании</a></li>
+          <li><a href="#">Доставка и оплата</a></li>
+          <li><a href="#">О Компании</a></li>
         </ul>
         <ul class="user-navigation">
-          <li class="search">Поиск</li>
-          <li class="login-link">Вход</li>
-          <li class="basket">Пусто</li>
+          <li> <a class="header-btn-search" href="#"><span class="visually-hidden">Поиск</span></a></li>
+          <li><a class="login-link" href="#">Вход</a></li>
+          <li><a class="header-btn-basket" href="#"><span class="visually-hidden">Корзина</span><span class="btn-basket-text">Пусто</span></a></li>
         </ul>
-        <span class="opening-hours">С 10 до 20, ежедневно</span><br>
-        <span class="phone-number">8 812 450-25-25</span>
+        <div class="page-header-info">
+          <p class="opening-hours">С 10 до 20, ежедневно</p>
+          <a class="phone-number" href="tel:+78124502525">8 812 450-25-25</a>
+        </div>
       </nav>
     </header>
     <main class="container">
       <h1 class="visually-hidden">Магазин "Глейси"</h1>
-      <section class="present">
+      <section class="bonus">
         <h2 class="visually-hidden">Акции магазина</h2>
-        <ul class="present-list">
-          <li class="present-item">
+        <ul class="bonus-list">
+          <li class="bonus-item">
             <h3>Малинка даром!</h3>
             <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+            <a class="button" href="catalog.html">Хочу варенье!</a>
+          </li>
+          <li class="bonus-item">
+            <h3>Шоколадки даром!</h3>
+            <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
             <a class="button" href="catalog.html">Хочу шоколадки!</a>
           </li>
-          <li class="present-item">
-              <h3>Шоколадки даром!</h3>
-              <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-              <a class="button" href="catalog.html">Хочу шоколадки!</a>
-            </li>
         </ul>
       </section>
-      <section class="popular">
-          <h2 class="visually-hidden">Хиты продаж</h2>
-          <figure>
-              <img src="http://placehold.it/150x100">
-              <figcaption>описание мороженого1</figcaption>
-          </figure>
-          <figure>
-              <img src="http://placehold.it/150x100">
-              <figcaption>описание мороженого2</figcaption>
-          </figure>
-          <figure>
-              <img src="http://placehold.it/150x100">
-              <figcaption>описание мороженого3</figcaption>
-          </figure>
-          <figure>
-              <img src="http://placehold.it/150x100">
-              <figcaption>описание мороженого4</figcaption>
-          </figure>
+      <section class="popular-offers">
+        <h2 class="visually-hidden">Хиты продаж</h2>
+          <ul>
+            <li class="offers-item">
+              <img src="http://placehold.it/150x100" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+              <img src="http://placehold.it/50x50" alt="Хит!">
+              <span class="item-price">420</span><span class="item-weight">/кг</span>
+              <h3 class="offers-title"><a href="catalog.html">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></h3>
+              <a class="offers-btn" href="#">Быстрый просмотр</a>
+            </li>
+            <li class="offers-item">
+              <img src="http://placehold.it/150x100" alt="Сливочно-кофейное с кусочками шоколада">
+              <span class="item-price">420</span><span class="item-weight">/кг</span>
+              <h3 class="offers-title"><a href="catalog.html">Сливочно-кофейное с кусочками шоколада</a></h3>
+              <a class="offers-btn" href="#">Быстрый просмотр</a>
+            </li>
+            <li class="offers-item">
+              <img src="http://placehold.it/150x100" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+              <span class="item-price">420</span><span class="item-weight">/кг</span>
+              <h3 class="offers-title"><a href="catalog.html">Сливочно-клубничное с присыпкой из белого шоколада</a></h3>
+              <a class="offers-btn" href="#">Быстрый просмотр</a>
+            </li>
+            <li class="offers-item">
+              <img src="http://placehold.it/150x100" alt="Сливочное крем-брюле с карамельной подливкой">
+              <span class="item-price">420</span><span class="item-weight">/кг</span>
+              <h3 class="offers-title"><a href="catalog.html">Сливочное крем-брюле с карамельной подливкой</a></h3>
+              <a class="offers-btn" href="#">Быстрый просмотр</a>
+            </li>
+          </ul>
       </section>
       <section class="features">
         <h2 class="visually-hidden">Преимущества</h2>
-        <h3>Магазин Глейси- это онлайн- и офлайн-магазин по продаже мороженного собственного производства на развес</h3>
+        <p>Магазин Глейси- это онлайн- и офлайн-магазин по продаже мороженного собственного производства на развес</p>
         <ul class="features-list">
-            <li class="feature-item">
-              <p>текст1</p>
-            </li>
-            <li class="feature-item">
-                <p>текст2</p>
-              </li>
-            <li class="feature-item">
-              <p>текст3</p>
-            </li>
-            <li class="feature-item">
-                <p>текст4</p>
-            </li>
+          <li class="features-icecream">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
+          <li class="features-partners">Закупка ингредиентов   производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
+          <li class="features-eco">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
+          <li class="features-thermo">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
         </ul>
       </section>
       <article class="new-article">
-        <h3>Новое в нашем блоге</h3>
+        <h2>Новое в нашем блоге</h2>
         <a href="index.html">10 способов сервировки фруковых щербетов к столу</a>
       </article>
       <section class="subscription-form">
-        <h3 class="visually-hidden">Подписка</h3>
-        <p>текст, предлагающий подписку</p>
-        <a class="button" href="catalog.html">Отправить</a>
+        <h2 class="visually-hidden">Подписка</h2>
+        <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+        <!-- Форма -->
+        <form class="news-distrib" action="https://echo.htmlacademy.ru" method="post">
+          <label class="visually-hidden" for="emeil">Электронная почта</label>
+          <input type="text" name="emeil" placeholder="Электронная почта">
+          <input type="submit" value="Отправить">
+        </form>
       </section>
       <section class="map">
-        <h2 class="visually-hidden">Как нас найти</h2>
-        <section class="adress">
-          <h3 class="visually-hidden">Адрес офиса</h3>
-          <p>
-              Адрес главного офиса<br>
+      <h2 class="visually-hidden">Как нас найти</h2>
+      <section class="address">
+      <h3 class="visually-hidden">Адрес офиса</h3>
+      <p>
+      Адрес главного офиса<br>
               и офлайн магазина:<br>
               ул.Большая Конюшенная<br>
               19/8, Санкт-Петербург<br>
-          </p>
+            </p>
           <p>
               Для заказов по телефону:<br>
               8 812 450-24-25<br>
