--- a/catalog.html
+++ b/catalog.html
@@ -6,31 +6,70 @@
   </head>
   <body>
       <header class="main-header">
-          <nav class="main-navigation">
-            <a href="index.html">
-                <img src="http://placehold.it/150x100"  alt="Логотип магазина">
-            </a>
-            <ul class="site-navigation">
-              <li class="site-navigation-current"><a href="catalog.html">Каталог</a></li>
-              <li><a href="delivery.html">Доставка и оплата</a></li>
-              <li><a href="about_company.html">О Компании</a></li>
-            </ul>
-            <ul class="user-navigation">
-              <li class="search">Поиск</li>
-              <li class="login-link">Вход</li>
-              <li class="basket">2 товара</li>
-            </ul>
-            <span class="opening-hours">С 10 до 20, ежедневно</span><br>
-            <span class="phone-number">8 812 450-25-25</span>
-          </nav>
-        </header>
-        <main class="container"></main>
-         <h1>Сливочное мороженое</h1>
-         <ul class="breadcrumbs">
-           <li><a href="index.html">Главная</a></li>
-           <li><a href="catalog.html">Каталог</a></li>
-           <li class="breadcrumbs-current-page">Сливочное мороженое</li>
-         </ul>
+        <nav class="main-navigation">
+          <a href="index.html">
+            <img src="http://placehold.it/150x100"  alt="Логотип магазина">
+          </a>
+          <ul class="site-navigation">
+            <li class="site-navigation-current"><a href="catalog.html">Каталог</a>
+              <ul class="site-navigation-submenu">
+                <li class="site-navigation-submenu-top"><a href="#">Новинки</a></li>
+                <li class="site-navigation-submenu-item-current">Сливочное</li>
+                <li class="site-navigation-submenu-item"><a href="#">Щербеты</a></li>
+                <li class="site-navigation-submenu-item"><a href="#">Фруктовый лед</a></li>
+                <li class="site-navigation-submenu-item"><a href="#">Мелорин</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Доставка и оплата</a></li>
+            <li><a href="#">О Компании</a></li>
+          </ul>
+          <ul class="user-navigation">
+          <li> <a class="header-btn-search" href="#"><span class="visually-hidden">Поиск</span></a>
+              <!-- Здесь будет форма -->
+          </li>
+          <li><a class="login-link" href="#">Вход</a>
+              <!-- Здесь будет форма -->
+          </li>
+          <li><a class="header-btn-basket-full" href="#"><span class="visually-hidden">Корзина</span><span class="btn-basket-text">2 товара</span></a>
+            <div class="basket container">
+              <ul class="basket-list">
+                <li class="basket-item">
+                  <button class="basket-item-delete">Удалить товар</button>
+                  <img src="http://placehold.it/50x50" alt="первый товар">
+                  <p class="basket-item-title">Пломбир с апельсиновым джемом</p>
+                  <p class="basket-item-weight">1,5 кг х <span class="basket-price">200 руб</span></p>
+                  <p class="basket-item-price">300 руб.</p>
+                </li>
+                <li class="basket-item">
+                  <button class="basket-item-delete">Удалить товар</button>
+                  <img src="http://placehold.it/50x50" alt="второй товар">
+                  <p class="basket-item-title">Клубничный пломбир с присыпкой из белого шоколада</p>
+                  <p class="basket-item-weight">1,5 кг х <span class="basket-price">300 руб</span></p>
+                  <p class="basket-item-price">400 руб.</p>
+                </li>
+                <li class="basket-total-price">
+                  <p><b>Итого: 750 руб.</b></p>
+                </li>
+                <li class="complete-order">
+                  <button class="complete-btn">Оформить заказ</button>
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+        <div class="page-header-info">
+          <p class="opening-hours">С 10 до 20, ежедневно</p>
+          <a class="phone-number" href="tel:+78124502525">8 812 450-25-25</a>
+        </div>
+        </nav>
+      </header>
+      <main class="container">
+        <h1>Сливочное мороженое</h1>
+        <ul class="breadcrumbs">
+          <li><a href="index.html">Главная</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li class="breadcrumbs-current-page">Сливочное мороженое</li>
+        </ul>
          <section class="filters">
            <h2 class="visually-hidden">Фильтры мороженого</h2>
            <!-- здесь будет форма -->
@@ -39,84 +78,97 @@
            <h2 class="visually-hidden">Список видов мороженого</h2>
            <ul class="catalog-list">
              <li class="catalog-item">
-                <h3>описание мороженого1</h3>
-                <img src="http://placehold.it/150x100">
+                <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+                <img src="http://placehold.it/150x100" alt="мороженое">
                 <span class="item-price">310</span><span class="item-weight">/кг</span>
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
              </li>
              <li class="catalog-item">
-                <h3>описание мороженого2</h3>
-                <img src="http://placehold.it/150x100">
+                <h3>Сливочно-кофейное с кусочками шоколада</h3>
+                <img src="http://placehold.it/150x100" alt="мороженое">
                 <span class="item-price">380</span><span class="item-weight">/кг</span>
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
               </li>
               <li class="catalog-item">
-                  <h3>описание мороженого3</h3>
-                  <img src="http://placehold.it/150x100">
-                  <span class="item-price">355</span><span class="item-weight">/кг</span>
+                <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
+                <img src="http://placehold.it/150x100" alt="мороженое">
+                <span class="item-price">355</span><span class="item-weight">/кг</span>
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
               </li>
               <li class="catalog-item">
-                  <h3>описание мороженого4</h3>
-                  <img src="http://placehold.it/150x100">
-                  <span class="item-price">415</span><span class="item-weight">/кг</span>
+                <h3>Сливочное крем-брюле с карамельной подливкой</h3>
+                <img src="http://placehold.it/150x100" alt="мороженое">
+                <span class="item-price">415</span><span class="item-weight">/кг</span>
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
               </li>
               <li class="catalog-item">
-                  <h3>описание мороженого5</h3>
-                  <img src="http://placehold.it/150x100">
-                  <span class="item-price">325</span><span class="item-weight">/кг</span>
+                <h3>Сливочное с брусничным джемом</h3>
+                <img src="http://placehold.it/150x100" alt="мороженое">
+                <span class="item-price">325</span><span class="item-weight">/кг</span>
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
               </li>
               <li class="catalog-item">
-                    <h3>описание мороженого6</h3>
-                    <img src="http://placehold.it/150x100">
-                    <span class="item-price">410</span><span class="item-weight">/кг</span>
+                <h3>Сливочно-черничное с цельными ягодами черники</h3>
+                <img src="http://placehold.it/150x100" alt="мороженое">
+                <span class="item-price">410</span><span class="item-weight">/кг</span>
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
               </li>
               <li class="catalog-item">
-                    <h3>описание мороженого7</h3>
-                    <img src="http://placehold.it/150x100">
-                    <span class="item-price">375</span><span class="item-weight">/кг</span>
+                <h3>Сливочно-лимонное с карамельной присыпкой</h3>
+                <img src="http://placehold.it/150x100" alt="мороженое">
+                <span class="item-price">375</span><span class="item-weight">/кг</span>
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
               </li>
               <li class="catalog-item">
-                  <h3>описание мороженого8</h3>
-                  <img src="http://placehold.it/150x100">
-                  <span class="item-price">320</span><span class="item-weight">/кг</span>
+                <h3>Сливочное с шоколадной стружкой</h3>
+                <img src="http://placehold.it/150x100" alt="мороженое">
+                <span class="item-price">320</span><span class="item-weight">/кг</span>
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
               </li>
               <li class="catalog-item">
-                  <h3>описание мороженого9</h3>
-                  <img src="http://placehold.it/150x100">
-                  <span class="item-price">440</span><span class="item-weight">/кг</span>
+                <h3>Сливочно-ванильное с кусочками шоколада</h3>
+                <img src="http://placehold.it/150x100" alt="мороженое">
+                <span class="item-price">440</span><span class="item-weight">/кг</span>
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
               </li>
               <li class="catalog-item">
-                  <h3>описание мороженого10</h3>
-                  <img src="http://placehold.it/150x100">
-                  <span class="item-price">435</span><span class="item-weight">/кг</span>
-              </li>
-              <li class="catalog-item">
-                  <h3>описание мороженого11</h3>
-                  <img src="http://placehold.it/150x100">
-                  <span class="item-price">355</span><span class="item-weight">/кг</span>
+                  <h3>Сливочноe с ментоловым сиропом</h3>
+                  <img src="http://placehold.it/150x100" alt="мороженое">
+                  <span class="item-price">420</span><span class="item-weight">/кг</span>
+                  <a class="offers-btn" href="#">Быстрый просмотр</a>
                 </li>
-                <li class="catalog-item">
-                    <h3>описание мороженого12</h3>
-                    <img src="http://placehold.it/150x100">
-                    <span class="item-price">420</span><span class="item-weight">/кг</span>
-                </li>
+              <li class="catalog-item">
+                <h3>Сливочное с кусочками черного шоколада</h3>
+                <img src="http://placehold.it/150x100" alt="мороженое">
+                <span class="item-price">435</span><span class="item-weight">/кг</span>
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
+              </li>
+              <li class="catalog-item">
+                <h3>Сливочное с мятным сиропом</h3>
+                <img src="http://placehold.it/150x100" alt="мороженое">
+                <span class="item-price">355</span><span class="item-weight">/кг</span>
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
+              </li>
            </ul>
-           <ul class="pages">
-              <li class="current-page">1</li>
-              <li>2</li>
-              <li>3</li>
-              <li>4</li>
-              <li>5</li>
-              <li>далее</li>
+           <ul class="pagination-list">
+              <li class="pagination-item pagination-item-current"><a>1</a></li>
+              <li class="pagination-item"><a href="#">2</a></li>
+              <li class="pagination-item"><a href="#">3</a></li>
+              <li class="pagination-item"><a href="#">4</a></li>
+              <li class="pagination-item"><a href="#">5</a></li>
+              <li class="pagination-item"><a href="#">&gt;</a></li>
             </ul>
          </section>
-         <footer class="main-footer">
-            <div class="footer-social">
-              <ul>
-                <li><a class="social-button" href="#">Твиттер</a></li>
-                <li><a class="social-button" href="#">Инстаграм</a></li>
-                <li><a class="social-button" href="#">Фейсбук</a></li>
-                <li><a class="social-button" href="#">Вконтакте</a></li>
+        </main>
+        <footer class="main-footer">
+          <div class="footer-social">
+            <ul>
+              <li><a class="social-button" href="#">Твиттер</a></li>
+              <li><a class="social-button" href="#">Инстаграм</a></li>
+              <li><a class="social-button" href="#">Фейсбук</a></li>
+              <li><a class="social-button" href="#">Вконтакте</a></li>
               </ul>
-            </div>
+          </div>
             <p class="information">
               <a class="link-information" href="#">Для поставщиков</a><br>
               <a class="link-information" href="#">О производстве</a>
@@ -127,7 +179,7 @@
             </p>
             <p class="footer-copyright">
               <a href="https://htmlacademy.ru/intensive/htmlcss">
-                <img src="http://placehold.it/150x100"  alt="Логотип HTML Academy">
+              <img src="http://placehold.it/150x100"  alt="Логотип HTML Academy">
               </a>
               Сделано в HTML Academy ©2017
             </p>
