--- a/index.html
+++ b/index.html
@@ -6,18 +6,30 @@
   </head>
   <body>
     <header class="main-header">
+      <div class="main-header-logo">
+        <img src="http://placehold.it/150x100"  alt="Логотип магазина">
+      </div>
       <nav class="main-navigation">
-        <div class="main-header-logo">
-            <img src="http://placehold.it/150x100"  alt="Логотип магазина">
-        </div>
         <ul class="site-navigation">
-          <li><a href="catalog.html">Каталог</a></li>
+          <li class="site-navigation"><a href="catalog.html">Каталог</a>
+            <ul class="site-navigation-list">
+              <li class="site-navigation-list-top"><a href="#">Новинки</a></li>
+              <li class="site-navigation-list-item"><a href="catalog.html">Сливочное</a></li>
+              <li class="site-navigation-list-item"><a href="#">Щербеты</a></li>
+              <li class="site-navigation-list-item"><a href="#">Фруктовый лед</a></li>
+              <li class="site-navigation-list-item"><a href="#">Мелорин</a></li>
+            </ul>
+          </li>
           <li><a href="#">Доставка и оплата</a></li>
           <li><a href="#">О Компании</a></li>
         </ul>
         <ul class="user-navigation">
-          <li> <a class="header-btn-search" href="#"><span class="visually-hidden">Поиск</span></a></li>
-          <li><a class="login-link" href="#">Вход</a></li>
+          <li> <a class="header-btn-search" href="#"><span class="visually-hidden">Поиск</span></a>
+          <!-- Здесь будет форма -->
+          </li>
+          <li><a class="login-link" href="#">Вход</a>
+          <!-- Здесь будет форма -->
+          </li>
           <li><a class="header-btn-basket" href="#"><span class="visually-hidden">Корзина</span><span class="btn-basket-text">Пусто</span></a></li>
         </ul>
         <div class="page-header-info">
@@ -49,25 +61,28 @@
             <li class="offers-item">
               <img src="http://placehold.it/150x100" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
               <img src="http://placehold.it/50x50" alt="Хит!">
-              <span class="item-price">420</span><span class="item-weight">/кг</span>
+              <span class="item-price">310</span><span class="item-weight">/кг</span>
               <h3 class="offers-title"><a href="catalog.html">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></h3>
               <a class="offers-btn" href="#">Быстрый просмотр</a>
             </li>
             <li class="offers-item">
               <img src="http://placehold.it/150x100" alt="Сливочно-кофейное с кусочками шоколада">
-              <span class="item-price">420</span><span class="item-weight">/кг</span>
+              <img src="http://placehold.it/50x50" alt="Хит!">
+              <span class="item-price">380</span><span class="item-weight">/кг</span>
               <h3 class="offers-title"><a href="catalog.html">Сливочно-кофейное с кусочками шоколада</a></h3>
               <a class="offers-btn" href="#">Быстрый просмотр</a>
             </li>
             <li class="offers-item">
               <img src="http://placehold.it/150x100" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-              <span class="item-price">420</span><span class="item-weight">/кг</span>
+              <img src="http://placehold.it/50x50" alt="Хит!">
+              <span class="item-price">355</span><span class="item-weight">/кг</span>
               <h3 class="offers-title"><a href="catalog.html">Сливочно-клубничное с присыпкой из белого шоколада</a></h3>
               <a class="offers-btn" href="#">Быстрый просмотр</a>
             </li>
             <li class="offers-item">
               <img src="http://placehold.it/150x100" alt="Сливочное крем-брюле с карамельной подливкой">
-              <span class="item-price">420</span><span class="item-weight">/кг</span>
+              <img src="http://placehold.it/50x50" alt="Хит!">
+              <span class="item-price">415</span><span class="item-weight">/кг</span>
               <h3 class="offers-title"><a href="catalog.html">Сливочное крем-брюле с карамельной подливкой</a></h3>
               <a class="offers-btn" href="#">Быстрый просмотр</a>
             </li>
@@ -83,56 +98,53 @@
           <li class="features-thermo">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
         </ul>
       </section>
-      <article class="new-article">
-        <h2>Новое в нашем блоге</h2>
-        <a href="index.html">10 способов сервировки фруковых щербетов к столу</a>
-      </article>
-      <section class="subscription-form">
-        <h2 class="visually-hidden">Подписка</h2>
-        <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-        <!-- Форма -->
-        <form class="news-distrib" action="https://echo.htmlacademy.ru" method="post">
-          <label class="visually-hidden" for="emeil">Электронная почта</label>
-          <input type="text" name="emeil" placeholder="Электронная почта">
-          <input type="submit" value="Отправить">
-        </form>
-      </section>
+      <div class="blog-news-wrapper">
+        <article class="new-article">
+          <h2>Новое в нашем блоге</h2>
+          <a href="index.html">10 способов сервировки фруковых щербетов к столу</a>
+        </article>
+        <section class="subscription-form">
+          <h2 class="visually-hidden">Подписка</h2>
+          <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+          <form class="news-distrib" action="https://echo.htmlacademy.ru" method="post">
+           <label for="emeil">Электронная почта</label>
+           <input type="text" name="emeil" id="emeil" placeholder="Электронная почта">
+           <input type="submit" value="Отправить">
+          </form>
+        </section>
+      </div>
       <section class="map">
-      <h2 class="visually-hidden">Как нас найти</h2>
-      <section class="address">
-      <h3 class="visually-hidden">Адрес офиса</h3>
-      <p>
-      Адрес главного офиса<br>
-              и офлайн магазина:<br>
-              ул.Большая Конюшенная<br>
-              19/8, Санкт-Петербург<br>
-            </p>
+        <h2 class="visually-hidden">Как нас найти</h2>
+        <section class="address">
+          <h3 class="visually-hidden">Адрес офиса</h3>
           <p>
-              Для заказов по телефону:<br>
-              8 812 450-24-25<br>
-              (с 10 до 20 ежедневно)
+            Адрес главного офиса<br>
+            и офлайн магазина:<br>
+            ул.Большая Конюшенная<br>
+            19/8, Санкт-Петербург<br>
           </p>
-            <a class="button-feedback" href="index.html">Форма обратной связи</a>
+          <p>
+            Для заказов по телефону:<br>
+            8 812 450-24-25<br>
+            (с 10 до 20 ежедневно)
+          </p>
+          <a class="button-feedback" href="index.html">Форма обратной связи</a>
         </section>
       </section>
     </main>
     <footer class="main-footer">
-        <div class="footer-social">
-          <ul>
-            <li><a class="social-button" href="#">Твиттер</a></li>
-            <li><a class="social-button" href="#">Инстаграм</a></li>
-            <li><a class="social-button" href="#">Фейсбук</a></li>
-            <li><a class="social-button" href="#">Вконтакте</a></li>
-          </ul>
-        </div>
-        <p class="information">
-          <a class="link-information" href="#">Для поставщиков</a><br>
-          <a class="link-information" href="#">О производстве</a>
-        </p>
-        <p>
-          <a class="link-information" href="#">Наши документы</a><br>
-          <a class="link-information" href="#">Экологические стандарты</a>
-        </p>
+      <div class="footer-social">
+        <ul>
+          <li><a class="social-button" href="#">Твиттер</a></li>
+          <li><a class="social-button" href="#">Инстаграм</a></li>
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">Вконтакте</a></li>
+        </ul>
+      </div>
+        <p><a class="link-information" href="#">Для поставщиков</a></p>
+        <p><a class="link-information" href="#">О производстве</a></p>
+        <p><a class="link-information" href="#">Наши документы</a></p>
+        <p><a class="link-information" href="#">Экологические стандарты</a></p>
         <p class="footer-copyright">
           <a href="https://htmlacademy.ru/intensive/htmlcss">
           <img src="http://placehold.it/150x100"  alt="Логотип HTML Academy">
