--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
           </a>
         </li>
       </ul>
+    </nav>
       <div class="page-header-info">
         <p class="opening-hours">С 10 до 20, ежедневно</p>
         <a class="phone-number" href="tel:+78124502525">8 812 450-25-25</a>
       </div>
-    </nav>
   </header>
   <!-- <section class="slider">Тут будет слайдер</section> -->
   <main class="container">
@@ -143,8 +143,8 @@
         <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем
           не спамить и не слать всякой ненужной ерунды. Честно =)</p>
         <form class="news-distrib" action="https://echo.htmlacademy.ru" method="post">
-          <label for="emeil">Электронная почта</label>
-          <input type="text" name="emeil" id="emeil" placeholder="Электронная почта">
+          <label for="email">Электронная почта</label>
+          <input type="email" name="email" id="email" placeholder="Электронная почта">
           <input type="submit" value="Отправить">
         </form>
       </section>
