edit length of string

--- a/catalog.html
+++ b/catalog.html
@@ -13,22 +13,22 @@
     </a>
     <nav class="main-navigation">
       <ul class="site-navigation">
-        <li class="site-navigation">
+          <li class="site-navigation-current">
           <a href="catalog.html">Каталог</a>
-          <ul class="site-navigation-list">
-            <li class="site-navigation-list-item">
+          <ul class="site-navigation-submenu">
+            <li class="site-navigation-submenu-item">
               <a href="#"><b>Новинки</b></a>
             </li>
-            <li class="site-navigation-list-item">
+            <li class="site-navigation-submenu-item-current">
               <a href="catalog.html">Сливочное</a>
             </li>
-            <li class="site-navigation-list-item">
+            <li class="site-navigation-submenu-item">
               <a href="#">Щербеты</a>
             </li>
-            <li class="site-navigation-list-item">
+            <li class="site-navigation-submenu-item">
               <a href="#">Фруктовый лед</a>
             </li>
-            <li class="site-navigation-list-item">
+            <li class="site-navigation-submenu-item">
               <a href="#">Мелорин</a>
             </li>
           </ul>
