--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
       <h2 class="visually-hidden">Преимущества</h2>
       <h3>Магазин Глейси- это онлайн- и офлайн-магазин по продаже мороженного собственного производства на развес</h3>
       <ul class="features-list">
-        <li class="features-icecream">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных
-          временем технологий.</li>
-        <li class="features-partners">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает
-          долговременное сотрудничество.</li>
-        <li class="features-eco">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты
-          и добавки произведены из натурального, экологически чистого сырья.</li>
-        <li class="features-thermo">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять
-          в пути и позволяет сохранить превосходный вкус.</li>
+        <li class="features-icecream">Все наше мороженое изготавливается на собственном производстве, с использованием
+          современного оборудования и проверенных временем технологий.</li>
+        <li class="features-partners">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с
+          которыми нас связывает долговременное сотрудничество.</li>
+        <li class="features-eco">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все
+          дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
+        <li class="features-thermo">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не
+          дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
       </ul>
     </section>
     <div class="blog-news-wrapper">
